--- a/src/app/pages/settings/edit-profile/edit-profile.html
+++ b/src/app/pages/settings/edit-profile/edit-profile.html
@@ -63,7 +63,7 @@
 
       <div class="d-flex gap-2">
         <button class="btn btn-outline-danger" type="button" (click)="onCancel()">Cancel</button>
-        <button class="btn btn-primary" type="submit" (click)="onSave()">Save</button>
+        <button class="btn btn-primary" type="submit" (click)="save()">Save</button>
       </div>
     </form>
   </div>
