--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+/* src/styles.scss */
+html {
+  font-size: 14px; /* Sets base font size for rem units (default is 16px) */
+}
+
+body {
+  font-size: 0.875rem; /* 14px if root is 16px, or scales with html */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
