--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,6 +1,6 @@
 <!-- Hero Section -->
 <!-- Hero Section with Side Image -->
-<div class="hero-section  border-bottom py-5">
+<div class="hero-section border-bottom py-5">
   <div class="container">
     <div class="row align-items-center">
       <!-- Text Content -->
@@ -10,31 +10,45 @@
           Your Document Workflow
         </h1>
         <p class="text-muted fs-5 mt-3">
-          Easily scan documents like ID cards, forms, and invoices — then extract structured data automatically using AI-powered OCR and smart templates.
+          Easily scan documents like ID cards, forms, and invoices — then
+          extract structured data automatically using AI-powered OCR and smart
+          templates.
         </p>
-        <button class="btn btn-dark rounded-pill mt-3 px-4 py-2 " (click)="scrollToTemplates()">
+        <button
+          class="btn btn-dark rounded-pill mt-3 px-4 py-2"
+          (click)="scrollToTemplates()"
+        >
           Start Scanning
         </button>
-         <button class="btn btn-create rounded-pill mt-3 px-4 py-2" (click)="navigateToTemplateBuilder()">
+        <button
+          class="btn btn-create rounded-pill mt-3 px-4 py-2"
+          (click)="navigateToTemplateBuilder()"
+        >
           Create Template
         </button>
       </div>
 
       <!-- Side Image -->
       <div class="col-md-6 text-center mt-4 mt-md-0">
-         <img src="./images/hero.jpg"
-         alt="illustration"
-         class="img-fluid mt-4 illustration-pop"
-         style="max-height:540px;" />
-       </div>
+        <img
+          src="./images/hero.jpg"
+          alt="illustration"
+          class="img-fluid mt-4 illustration-pop"
+          style="max-height: 540px"
+        />
+      </div>
     </div>
   </div>
 </div>
 
-
 <!-- Search Bar -->
-<div id="template-cards" class="search-bar-section py-3 bg-white shadow-sm position-relative z-1">
-  <div class="container d-flex flex-column flex-md-row align-items-center justify-content-center gap-3">
+<div
+  id="template-cards"
+  class="search-bar-section py-3 bg-white shadow-sm position-relative z-1"
+>
+  <div
+    class="container d-flex flex-column flex-md-row align-items-center justify-content-center gap-3"
+  >
     <input
       type="text"
       class="form-control rounded-pill px-4 w-100 w-md-50"
@@ -51,15 +65,15 @@
 </div>
 
 <!-- Template Cards Section -->
-<div  class="container mt-5">
+<div class="container mt-5">
   <h3 class="fw-bold mb-4 text-center text-md-start">Popular Templates</h3>
   <div class="row">
-  <app-template-card
-  *ngFor="let template of templates"
-  [template]="template"
-  (useTemplate)="navigateToDocument($event)"
-   (editTemplate)="navigateToEdit($event)"
-  class="col-12 col-sm-6 col-md-4 mb-4"
-></app-template-card>
+    <app-template-card
+      *ngFor="let template of templates"
+      [template]="template"
+      (useTemplate)="navigateToDocument($event)"
+      (editTemplate)="navigateToEdit($event)"
+      class="col-12 col-sm-6 col-md-4 mb-4"
+    ></app-template-card>
   </div>
 </div>
