--- a/src/app/pages/header/header.html
+++ b/src/app/pages/header/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark shadow-sm px-4">
+<nav class="navbar navbar-expand-lg bg-gradient-to-b from-gray-800 to-gray-900 shadow-sm px-4">
   <div
     class="container-fluid d-flex align-items-center justify-content-between"
   >
