feat: more tailwind intergration

--- a/src/app/pages/document/document.html
+++ b/src/app/pages/document/document.html
@@ -105,7 +105,7 @@
         [disabled]="isExporting"
       >
         <i class="bi" [class.bi-hourglass]="isExporting" [class.bi-folder]="!isExporting"></i>
-        <span>{{ isExporting ? 'Exporting...' : 'Export' }}</span>
+        <span gap-2>{{ isExporting ? 'Exporting...' : 'Export' }}</span>
       </button>
     </div>
 
