--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -1,6 +1,6 @@
-<div class="login-page flex min-h-screen bg-gradient-to-b from-gray-900 to-black">
+<div class="login-page flex min-h-screen bg-gradient-to-b from-gray-900 to-black ">
   <!-- Left Side: Login Form -->
-  <div class="w-full md:w-1/2 flex flex-col justify-center p-8 md:p-12 bg-gray-900">
+  <div class="w-full md:w-1/2 flex flex-col justify-center p-8 md:p-12 bg-gray-900 min-height-custom">
     <div class="text-center mb-10">
       <h1 class="text-4xl font-bold text-white mb-2">Welcome Back</h1>
       <p class="text-gray-400">Sign in to your account to continue</p>
@@ -104,7 +104,7 @@
   </div>
   <!-- Right Side: Illustration -->
   <div
-    class="right-banner hidden md:flex w-1/2 flex-col justify-center items-center relative p-5"
+    class="right-banner hidden md:flex w-1/2 flex-col justify-center items-center relative p-5 "
   >
     <!-- Floating Icon -->
     <div class="floating-icon absolute">
