--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -72,7 +72,7 @@
     </div>
     <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
       <img
-        src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/hero/phone-mockup.png"
+        src="https://www.adobe.com/acrobat/mobile/media_19810b7f77e0ca786ea70a7782ce916bdfa070ef4.png?width=2000&format=webply&optimize=medium"
         alt="mockup"
       />
     </div>
